More updates to resnet feature extractor

--- a/NST.ipynb
+++ b/NST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -247,134 +247,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict_keys' object has no attribute 'pop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-11c85ebd251f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0minte\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minte\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minte\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict_keys' object has no attribute 'pop'"
+     ]
+    }
+   ],
    "source": [
-    "resnet18.save_params('resnet18.params')\n",
-    "resnet18.load_params('resnet18.params',ctx=ctx)"
+    "A = mx.nd.load('vgg19.params')\n",
+    "\n",
+    "B = mx.nd.load('vgg19-0000.params')\n",
+    "\n",
+    "for inte in list(B.keys()):\n",
+    "    if inte not in list(A.keys()):\n",
+    "        B.keys().pop(inte)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stage1_conv0_weight\n",
-      "stage4_batchnorm1_gamma\n",
-      "stage4_batchnorm1_beta\n",
-      "stage2_batchnorm2_running_var\n",
-      "stage1_batchnorm3_beta\n",
-      "stage2_batchnorm2_gamma\n",
-      "stage3_batchnorm3_running_mean\n",
-      "stage3_batchnorm3_gamma\n",
-      "stage4_batchnorm1_running_var\n",
-      "stage3_batchnorm4_running_var\n",
-      "stage4_batchnorm3_gamma\n",
-      "stage1_batchnorm3_gamma\n",
-      "stage4_batchnorm0_running_mean\n",
-      "stage4_batchnorm4_gamma\n",
-      "stage3_batchnorm3_beta\n",
-      "stage2_batchnorm4_beta\n",
-      "stage4_batchnorm2_beta\n",
-      "stage3_batchnorm0_running_var\n",
-      "stage3_batchnorm1_beta\n",
-      "stage3_batchnorm0_gamma\n",
-      "stage3_conv2_weight\n",
-      "stage2_conv2_weight\n",
-      "stage2_batchnorm1_running_var\n",
-      "stage1_batchnorm1_running_mean\n",
-      "stage2_batchnorm3_gamma\n",
-      "stage3_batchnorm3_running_var\n",
-      "stage2_batchnorm0_running_var\n",
-      "stage2_batchnorm3_running_mean\n",
-      "stage1_batchnorm1_beta\n",
-      "stage1_conv1_weight\n",
-      "stage3_batchnorm1_running_mean\n",
-      "stage3_batchnorm0_running_mean\n",
-      "stage2_batchnorm0_beta\n",
-      "stage3_conv4_weight\n",
-      "stage1_batchnorm0_running_var\n",
-      "stage3_batchnorm0_beta\n",
-      "stage1_batchnorm1_gamma\n",
-      "stage3_batchnorm4_running_mean\n",
-      "stage4_batchnorm2_running_var\n",
-      "stage2_batchnorm1_beta\n",
-      "stage1_batchnorm0_gamma\n",
-      "stage2_batchnorm1_running_mean\n",
-      "stage2_batchnorm0_running_mean\n",
-      "stage1_batchnorm2_gamma\n",
-      "stage1_conv3_weight\n",
-      "stage4_batchnorm4_running_mean\n",
-      "stage3_batchnorm4_gamma\n",
-      "stage2_batchnorm3_beta\n",
-      "stage4_batchnorm0_beta\n",
-      "batchnorm0_running_var\n",
-      "stage1_batchnorm2_beta\n",
-      "batchnorm0_beta\n",
-      "stage4_conv4_weight\n",
-      "stage4_batchnorm4_beta\n",
-      "batchnorm0_gamma\n",
-      "stage2_batchnorm4_running_mean\n",
-      "stage4_batchnorm3_running_var\n",
-      "stage3_batchnorm2_beta\n",
-      "stage4_batchnorm2_gamma\n",
-      "stage4_conv3_weight\n",
-      "stage3_conv3_weight\n",
-      "dense0_bias\n",
-      "batchnorm0_running_mean\n",
-      "stage2_batchnorm2_beta\n",
-      "stage2_batchnorm2_running_mean\n",
-      "stage3_conv0_weight\n",
-      "stage1_batchnorm3_running_var\n",
-      "stage2_conv1_weight\n",
-      "stage4_batchnorm1_running_mean\n",
-      "stage3_batchnorm2_gamma\n",
-      "stage4_conv1_weight\n",
-      "stage4_batchnorm0_running_var\n",
-      "stage1_batchnorm3_running_mean\n",
-      "stage1_batchnorm2_running_mean\n",
-      "stage2_conv4_weight\n",
-      "stage3_batchnorm1_gamma\n",
-      "stage1_conv2_weight\n",
-      "stage1_batchnorm2_running_var\n",
-      "stage1_batchnorm0_running_mean\n",
-      "conv0_weight\n",
-      "stage3_batchnorm1_running_var\n",
-      "stage4_batchnorm4_running_var\n",
-      "stage4_batchnorm2_running_mean\n",
-      "stage1_batchnorm0_beta\n",
-      "dense0_weight\n",
-      "stage2_batchnorm4_gamma\n",
-      "stage2_conv3_weight\n",
-      "stage3_batchnorm2_running_var\n",
-      "stage4_batchnorm3_running_mean\n",
-      "stage2_batchnorm3_running_var\n",
-      "stage1_batchnorm1_running_var\n",
-      "stage4_conv2_weight\n",
-      "stage3_conv1_weight\n",
-      "stage4_conv0_weight\n",
-      "stage2_batchnorm1_gamma\n",
-      "stage2_conv0_weight\n",
-      "stage2_batchnorm4_running_var\n",
-      "stage4_batchnorm0_gamma\n",
-      "stage2_batchnorm0_gamma\n",
-      "stage3_batchnorm2_running_mean\n",
-      "stage3_batchnorm4_beta\n",
-      "stage4_batchnorm3_beta\n"
+      "['data', 'conv1_1_weight', 'conv1_1_bias', 'conv1_2_weight', 'conv1_2_bias', 'conv2_1_weight', 'conv2_1_bias', 'conv2_2_weight', 'conv2_2_bias', 'conv3_1_weight', 'conv3_1_bias', 'conv3_2_weight', 'conv3_2_bias', 'conv3_3_weight', 'conv3_3_bias', 'conv3_4_weight', 'conv3_4_bias', 'conv4_1_weight', 'conv4_1_bias', 'conv4_2_weight', 'conv4_2_bias', 'conv4_3_weight', 'conv4_3_bias', 'conv4_4_weight', 'conv4_4_bias', 'conv5_1_weight', 'conv5_1_bias', 'conv5_2_weight', 'conv5_2_bias', 'conv5_3_weight', 'conv5_3_bias', 'conv5_4_weight', 'conv5_4_bias', 'prob_label']\n"
      ]
     }
    ],
    "source": [
-    "weights=nd.load('resnet18.params')\n",
-    "for i in weights.keys():\n",
-    "    print(i)"
+    "sym, arg_params, aux_params = mx.model.load_checkpoint('vgg19', 0000)\n",
+    "#sym = mx.symbol.SoftmaxOutput(data=sym, name='prob')\n",
+    "vgg_symbol = sym\n",
+    "arg_names = vgg_symbol.list_arguments()\n",
+    "arg_names.remove('fc6_weight')\n",
+    "arg_names.remove('fc8_weight')\n",
+    "arg_names.remove('fc7_weight')\n",
+    "arg_names.remove('fc6_bias')\n",
+    "arg_names.remove('fc8_bias')\n",
+    "arg_names.remove('fc7_bias')\n",
+    "print(arg_names)"
    ]
   },
   {
@@ -474,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import mxnet as mx\n",
@@ -5316,6 +5240,164 @@
    ],
    "source": [
     "print(arg_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sym, arg_params, aux_params = mx.model.load_checkpoint('../resnet-18', 0)\n",
+    "mod = mx.mod.Module(symbol=sym, context=mx.cpu(), label_names=None)\n",
+    "mod.bind(for_training=False, data_shapes=[('data', (1,3,224,224))], \n",
+    "         label_shapes=mod._label_shapes)\n",
+    "mod.set_params(arg_params, aux_params, allow_missing=True)\n",
+    "all_layers = sym.get_internals()\n",
+    "all_layers.list_outputs()[-10:]\n",
+    "fe_sym = all_layers['flatten0_output']\n",
+    "fe_mod = mx.mod.Module(symbol=fe_sym, context=mx.cpu(), label_names=None)\n",
+    "fe_mod.bind(for_training=False, data_shapes=[('data', (1,3,224,224))])\n",
+    "fe_mod.set_params(arg_params, aux_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bn1_moving_var',\n",
+       " 'bn1_output',\n",
+       " 'relu1_output',\n",
+       " 'pool1_output',\n",
+       " 'flatten0_output',\n",
+       " 'fc1_weight',\n",
+       " 'fc1_bias',\n",
+       " 'fc1_output',\n",
+       " 'softmax_label',\n",
+       " 'softmax_output']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list the last 10 layers\n",
+    "all_layers = sym.get_internals()\n",
+    "all_layers.list_outputs()[-10:]\n",
+    "fe_sym = all_layers['flatten0_output']\n",
+    "fe_mod = mx.mod.Module(symbol=fe_sym, context=mx.cpu(), label_names=None)\n",
+    "fe_mod.bind(for_training=False, data_shapes=[('data', (1,3,224,224))])\n",
+    "fe_mod.set_params(arg_params, aux_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'dict' and 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-03489637f84d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'dict' and 'dict'"
+     ]
+    }
+   ],
+   "source": [
+    "A = {}\n",
+    "B = {}\n",
+    "A[1] =1\n",
+    "B[2] = 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DataDesc[data,(1, 3, 224, 224),<class 'numpy.float32'>,NCHW]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fe_mod.data_shapes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "# define a simple data batch\n",
+    "from collections import namedtuple\n",
+    "Batch = namedtuple('Batch', ['data'])\n",
+    "\n",
+    "def get_image(url, show=False):\n",
+    "    # download and show the image\n",
+    "    fname = mx.test_utils.download(url)\n",
+    "    img = cv2.cvtColor(cv2.imread(fname), cv2.COLOR_BGR2RGB)\n",
+    "    if img is None:\n",
+    "         return None\n",
+    "    if show:\n",
+    "         plt.imshow(img)\n",
+    "         plt.axis('off')\n",
+    "    # convert into format (batch, RGB, width, height)\n",
+    "    img = cv2.resize(img, (224, 224))\n",
+    "    img = np.swapaxes(img, 0, 2)\n",
+    "    img = np.swapaxes(img, 1, 2)\n",
+    "    img = img[np.newaxis, :]\n",
+    "    return img\n",
+    "\n",
+    "def predict(url):\n",
+    "    img = get_image(url, show=True)\n",
+    "    # compute the predict probabilities\n",
+    "    mod.forward(Batch([mx.nd.array(img)]))\n",
+    "    prob = mod.get_outputs()[0].asnumpy()\n",
+    "    # print the top-5\n",
+    "    prob = np.squeeze(prob)\n",
+    "    a = np.argsort(prob)[::-1]\n",
+    "    for i in a[0:5]:\n",
+    "        print('probability=%f, class=%s' %(prob[i], labels[i]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 512)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = get_image('http://writm.com/wp-content/uploads/2016/08/Cat-hd-wallpapers.jpg')\n",
+    "fe_mod.forward(Batch([mx.nd.array(img)]))\n",
+    "features = fe_mod.get_outputs()[0].asnumpy()\n",
+    "print(features.shape)"
    ]
   },
   {
