Writing new resnet blocks

--- a/fast_mrf_cnn/VGGTest.ipynb
+++ b/fast_mrf_cnn/VGGTest.ipynb
@@ -434,6 +434,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A = mx.nd.load('../vgg19.params')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['arg:conv4_1_weight', 'arg:conv5_2_weight', 'arg:conv3_2_weight', 'arg:conv1_2_weight', 'arg:conv1_1_weight', 'arg:conv3_1_bias', 'arg:conv4_2_weight', 'arg:conv2_1_bias', 'arg:conv5_1_weight', 'arg:conv4_3_bias', 'arg:conv5_2_bias', 'arg:conv5_4_weight', 'arg:conv3_4_bias', 'arg:conv2_2_bias', 'arg:conv4_4_bias', 'arg:conv3_2_bias', 'arg:conv3_1_weight', 'arg:conv5_3_weight', 'arg:conv3_4_weight', 'arg:conv1_2_bias', 'arg:conv4_3_weight', 'arg:conv3_3_bias', 'arg:conv4_2_bias', 'arg:conv4_1_bias', 'arg:conv5_4_bias', 'arg:conv2_2_weight', 'arg:conv2_1_weight', 'arg:conv1_1_bias', 'arg:conv5_3_bias', 'arg:conv4_4_weight', 'arg:conv3_3_weight', 'arg:conv5_1_bias'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['batchnorm0_beta', 'batchnorm0_gamma', 'batchnorm0_running_mean', 'batchnorm0_running_var', 'conv0_weight', 'dense0_bias', 'dense0_weight', 'stage1_batchnorm0_beta', 'stage1_batchnorm0_gamma', 'stage1_batchnorm0_running_mean', 'stage1_batchnorm0_running_var', 'stage1_batchnorm1_beta', 'stage1_batchnorm1_gamma', 'stage1_batchnorm1_running_mean', 'stage1_batchnorm1_running_var', 'stage1_batchnorm2_beta', 'stage1_batchnorm2_gamma', 'stage1_batchnorm2_running_mean', 'stage1_batchnorm2_running_var', 'stage1_batchnorm3_beta', 'stage1_batchnorm3_gamma', 'stage1_batchnorm3_running_mean', 'stage1_batchnorm3_running_var', 'stage1_conv0_weight', 'stage1_conv1_weight', 'stage1_conv2_weight', 'stage1_conv3_weight', 'stage2_batchnorm0_beta', 'stage2_batchnorm0_gamma', 'stage2_batchnorm0_running_mean', 'stage2_batchnorm0_running_var', 'stage2_batchnorm1_beta', 'stage2_batchnorm1_gamma', 'stage2_batchnorm1_running_mean', 'stage2_batchnorm1_running_var', 'stage2_batchnorm2_beta', 'stage2_batchnorm2_gamma', 'stage2_batchnorm2_running_mean', 'stage2_batchnorm2_running_var', 'stage2_batchnorm3_beta', 'stage2_batchnorm3_gamma', 'stage2_batchnorm3_running_mean', 'stage2_batchnorm3_running_var', 'stage2_batchnorm4_beta', 'stage2_batchnorm4_gamma', 'stage2_batchnorm4_running_mean', 'stage2_batchnorm4_running_var', 'stage2_conv0_weight', 'stage2_conv1_weight', 'stage2_conv2_weight', 'stage2_conv3_weight', 'stage2_conv4_weight', 'stage3_batchnorm0_beta', 'stage3_batchnorm0_gamma', 'stage3_batchnorm0_running_mean', 'stage3_batchnorm0_running_var', 'stage3_batchnorm1_beta', 'stage3_batchnorm1_gamma', 'stage3_batchnorm1_running_mean', 'stage3_batchnorm1_running_var', 'stage3_batchnorm2_beta', 'stage3_batchnorm2_gamma', 'stage3_batchnorm2_running_mean', 'stage3_batchnorm2_running_var', 'stage3_batchnorm3_beta', 'stage3_batchnorm3_gamma', 'stage3_batchnorm3_running_mean', 'stage3_batchnorm3_running_var', 'stage3_batchnorm4_beta', 'stage3_batchnorm4_gamma', 'stage3_batchnorm4_running_mean', 'stage3_batchnorm4_running_var', 'stage3_conv0_weight', 'stage3_conv1_weight', 'stage3_conv2_weight', 'stage3_conv3_weight', 'stage3_conv4_weight', 'stage4_batchnorm0_beta', 'stage4_batchnorm0_gamma', 'stage4_batchnorm0_running_mean', 'stage4_batchnorm0_running_var', 'stage4_batchnorm1_beta', 'stage4_batchnorm1_gamma', 'stage4_batchnorm1_running_mean', 'stage4_batchnorm1_running_var', 'stage4_batchnorm2_beta', 'stage4_batchnorm2_gamma', 'stage4_batchnorm2_running_mean', 'stage4_batchnorm2_running_var', 'stage4_batchnorm3_beta', 'stage4_batchnorm3_gamma', 'stage4_batchnorm3_running_mean', 'stage4_batchnorm3_running_var', 'stage4_batchnorm4_beta', 'stage4_batchnorm4_gamma', 'stage4_batchnorm4_running_mean', 'stage4_batchnorm4_running_var', 'stage4_conv0_weight', 'stage4_conv1_weight', 'stage4_conv2_weight', 'stage4_conv3_weight', 'stage4_conv4_weight']\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = mx.nd.load('../resnet18.params')\n",
+    "print(sorted(B.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del B['dense0_weight']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(sorted(B.keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "75 + 4*4+4 +5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
